@@ -1,3 +1,8 @@
+2007-10-25  Roland Mas  <lolando@debian.org>
+
+	* www/pm/msproject/msp.php: Use the role_settings table instead of
+	the project_perm view.
+
 2007-09-24  Roland Mas  <lolando@debian.org>
 
 	* common/include/Role.class.php: Removed code that made use of the
